--- a/public/resources/sass/layout/_global.scss
+++ b/public/resources/sass/layout/_global.scss
@@ -1,3 +1,7 @@
 html {
     background: $body-bg;
 }
+
+.container{
+    margin: 40px 150px;
+}
